# libdcnode

./: .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  Makefile  README.md  libdcnode.cmake  requirements.txt
.github/workflows/: build.yml  code_style.yml
cmake/: generate_dsdl.cmake
examples/stm32_hal/: hal.cpp
examples/ubuntu/: CMakeLists.txt  main.cpp
include/libdcnode/: can_driver.h  dronecan.h  internal.h  logger.hpp  params.h  platform.hpp  pub.hpp  publisher.hpp  serialization_internal.h  sub.hpp  subscriber.hpp
include/libdcnode/legacy/dronecan/sensors/hygrometer/: Hygrometer.h
include/libdcnode/legacy/uavcan/: CoarseOrientation.h
include/libdcnode/legacy/uavcan/equipment/actuator/: ArrayCommand.h
include/libdcnode/legacy/uavcan/equipment/ahrs/: MagneticFieldStrength.h  MagneticFieldStrength2.h  RawImu.h  Solution.h
include/libdcnode/legacy/uavcan/equipment/air_data/: IndicatedAirspeed.h  RawAirData.h  StaticPressure.h  StaticTemperature.h  TrueAirspeed.h
include/libdcnode/legacy/uavcan/equipment/camera_gimbal/: Status.h
include/libdcnode/legacy/uavcan/equipment/device/: Temperature.h
include/libdcnode/legacy/uavcan/equipment/esc/: RawCommand.h
include/libdcnode/legacy/uavcan/equipment/gnss/: ECEFPositionVelocity.h  Fix2.h
include/libdcnode/serialization/uavcan/include/: dronecan_msgs.h  dsdl.com.rl.vibration.Measurement.h
include/libdcnode/serialization/uavcan/src/: dsdl.com.rl.vibration.Measurement.c
scripts/: code_generation.sh
src/: dronecan.c  dronecan.cpp  logger.cpp
tests/: smoke_socketcan.py
(+11 files in other folders)
